Increase z-index of modals and modal-backdrop to prevent sidenav from being clickable whilea modalwas open, fix rotation of expand contact btn

--- a/client/src/pages/Job/style.scss
+++ b/client/src/pages/Job/style.scss
@@ -148,7 +148,7 @@ $box-shadow: $box-shadow-depth rgba($white, 0.08);
 }
 
 .rotate-up {
-    transform: rotate(180deg);
+    transform: rotate(90deg);
 }
 
 .rotate-down {
